# klopf-klopf-2025

./: .gitattributes  .gitignore  README.md  piska.p3
backend/: pyproject.toml
backend/src/backend/: __init__.py  app.py  config.py  database.py  models.py
backend/src/backend/ai/: model.py
frontend/: bun.lockb  index.html  package.json  rest.css
frontend/src/: App.vue  types.ts
frontend/src/components/: Message.vue  PopUp.vue  PopUpDisplay.vue  Search.vue
frontend/src/components/metro_map/: MetroMap.vue  app.ts  map.ts
