[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eliseydudin", email = "dudinelisey630@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.36.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
